fixed: our-team alignment issue in safari

--- a/resources/styles/modules/768.less
+++ b/resources/styles/modules/768.less
@@ -23,6 +23,7 @@
 		display:inline-block;
 		margin:10px;
 		overflow:hidden;
+		vertical-align:top;
 	}
 }
 .team-bio {
